# TWAX

./: .gitignore  README.md
backend/: .env.example  README.md  debug_imports.py  pyproject.toml  railway.json  requirements.txt  test_all.py
backend/app/: __init__.py  main.py
backend/app/api/: admin.py  articles.py  fetch.py  health.py  publish.py  tweets.py
backend/app/core/: config.py
backend/app/db/: __init__.py  models.py
backend/app/models/: __init__.py  schemas.py
backend/app/services/: ai.py  database.py  embeddings.py  publishing.py  rss.py
backend/twax_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
frontend/: .env.production  README.md  package.json
frontend/src/: middleware.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/src/app/api/auth/: route.ts
frontend/src/app/history/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/settings/: page.tsx
frontend/src/components/: ArticleCard.tsx  ModerationDashboard.tsx
frontend/src/components/dashboard/: article-card.tsx  day-timeline.tsx  slot-card.tsx  smart-queue.tsx  tweet-editor.tsx
frontend/src/components/layout/: app-sidebar.tsx  header.tsx
frontend/src/components/shared/: countdown-timer.tsx  score-badge.tsx  status-indicator.tsx
frontend/src/hooks/: use-keyboard-shortcuts.ts
frontend/src/lib/: api.ts  logger.ts  queries.ts  types.ts
n8n/: README.md  rss-aggregation.json
